# Phigros-Query-API

./: CMakeLists.txt  CMakePresets.json  README.md  错误码对照表.txt
.github/workflows/: build.yml
Phi/: CMakeLists.txt  README.md  cpp.hint
Phi/src/: main.cpp  main.h
Phi/src/common/exception/: self_exception.hpp
Phi/src/common/utils/: cxx_gc.hpp  get_set_build_util.hpp  http_util.hpp  log_system.hpp  other_util.hpp  prevent_inject.hpp  source_location_handle.hpp  sql_util.hpp
Phi/src/configuration/: config.hpp
Phi/src/controller/: arcaea_controller.hpp  phigros_controller.hpp
Phi/src/service/: arcaea_service.hpp  phigros_service.hpp
Phi/src/service/impl/: arcaea_service_impl.hpp  phi_taptap_api.hpp  phigros_service_impl.hpp
Phi/src/test/bing/: test_project.hpp
ProxyLoadBalancingAPI/: CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
ProxyLoadBalancingAPI/src/: main.cpp  main.h
ProxyLoadBalancingAPI/src/common/: crow_middleware.hpp  http_util.hpp  log_system.hpp  self_exception.hpp  utils.hpp
ProxyLoadBalancingAPI/src/configuration/: config.hpp
ProxyLoadBalancingAPI/src/test/bing/: test_project.hpp
resource/: PhigrosInfo.db  arcaea_song.db  config.yaml  localDB.db  music-info.json  sync.py  sync_yuhao.py
